--- a/style5.css
+++ b/style5.css
@@ -23,6 +23,27 @@
     }
 }
 
+@media screen and (min-width: 769px) and (max-width: 992px) {
+    .wrapper {
+        display: grid;
+        grid-gap: .1rem;
+        height: 100vh;
+        margin: 0 auto;
+        padding: 33px;
+        grid-template-columns: repeat(4, fr);
+        grid-template-rows: repeat(4, fr);
+        grid-template-areas: 
+        "meta   title   title   title"
+        "copy1  copy1   copy1   copy1"
+        "copy2  copy2   copy2   copy2"
+        "media  media   media   aside"
+        ;
+    }
+}
+
+
+
+
 .ctitle {
     display: flex;
     align-items: center;
@@ -51,7 +72,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rosybrown;
+    background-color: rgb(222, 141, 141);
     grid-area: copy2;
 }
 
