--- a/style5.css
+++ b/style5.css
@@ -30,6 +30,7 @@
         height: 100vh;
         margin: 0 auto;
         padding: 33px;
+        max-width: 1300px;
         grid-template-columns: repeat(4, fr);
         grid-template-rows: repeat(4, fr);
         grid-template-areas: 
@@ -49,6 +50,7 @@
         height: 100vh;
         margin: 0 auto;
         padding: 33px;
+        max-width: 1300px;
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(4, 1fr);
         grid-template-areas: 
